Prepare to release. Fix tests. Bump dependency versions.
git-svn-id: http://cerberus.rubyforge.org/svn@165 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 = Cerberus Changelog
 
 == Version 0.3.6
-RSpec
+RSpec, Gmailer support
 
 * Added out of box support of RSpec tests. 
   Usage: add to your project configuration following config
